fix: body padding and better spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,8 @@
 body {
   background-color: var(--background);
   color: var(--foreground);
+  max-width: clamp(230px, 95vw, 1600px);
+  margin: 0 auto;
 }
 
 h1,
@@ -26,4 +28,12 @@ ul {
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
+}
+
+main > * {
+  margin-top: 1.6rem;
+}
+
+h2 {
+  margin-bottom: 0.8rem;
 }
